# flightvars

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  appveyor.yml
common/: CMakeLists.txt
common/include/flightvars/concurrent/: executor.hpp  future.hpp  promise.hpp  shared_state.hpp  task.hpp
common/include/flightvars/concurrent/new/: future.hpp  promise.hpp  shared_state.hpp
common/include/flightvars/io/: buffer.hpp  connection.hpp  server.hpp  tcp-connection.hpp  tcp-server.hpp  types.hpp
common/include/flightvars/mqtt/: codecs.hpp  connect.hpp  connect_ack.hpp  messages.hpp  qos.hpp  session.hpp
common/include/flightvars/mqtt/codecs/: connect.hpp  connect_ack.hpp  fixed-header.hpp  types.hpp
common/include/flightvars/util/: attempt.hpp  either.hpp  endian.hpp  exception.hpp  format.hpp  logging.hpp  option.hpp
common/test/: integration-test.cpp  main.cpp  tcp-server-it.cpp  unit-test.cpp
common/test/concurrent/: executor-test.cpp  future-test.cpp  promise-test.cpp  shared-state-test.cpp  task-test.cpp
common/test/concurrent/new/: future-test.cpp  promise-test.cpp  shared-state-test.cpp
common/test/io/: buffer-test.cpp  tcp-server-it.cpp
common/test/mqtt/: mock_connection.hpp  session-test.cpp  session-test.hpp
common/test/mqtt/decoder/: connect-test.cpp  connect-test.hpp  connect_ack-test.cpp  fixed-header-test.cpp  fixed-header-test.hpp  types-test.cpp  types-test.hpp
common/test/mqtt/encoder/: connect-test.cpp  connect-test.hpp  connect_ack-test.cpp  fixed-header-test.cpp  fixed-header-test.hpp  types-test.cpp  types-test.hpp
common/test/util/: attempt-test.cpp  either-test.cpp  format-test.cpp  format-test.hpp  noncopyable.hpp  option-test.cpp  option-test.hpp
include/flightvars/concurrent/: future.hpp
include/flightvars/io/: buffer.hpp  connection.hpp  tcp-connection.hpp  tcp-server.hpp
include/flightvars/mqtt/: connect.hpp  decoder.hpp  encoder.hpp  messages.hpp  session.hpp
include/flightvars/mqtt/decoder/: connect.hpp  fixed-header.hpp  types.hpp
include/flightvars/mqtt/encoder/: connect.hpp  fixed-header.hpp  types.hpp
include/flightvars/util/: attempt.hpp  exception.hpp  logging.hpp
installer/: FlightVars.iss  flightvars.nsh  fs-plugins.nsh
src/: bus.rs  fs.rs  fv.rs  lib.rs  logging.rs  oacsp.rs  port.rs  types.rs  util.rs
src/bus/: mod.rs
src/comm/: dummy.rs  mod.rs  serial.rs  tcp.rs
src/domain/: fsuipc.rs  lvar.rs  mod.rs  msg.rs  notify.rs  types.rs  worker.rs
src/domain/fsuipc/: handler.rs  mod.rs  types.rs
src/domain/lvar/: ffi.rs  handler.rs  mod.rs  panel.rs
src/fsx/: config.rs  logging.rs  mod.rs  module.rs
src/io/: buffer.rs  device.rs  ffi.rs  iocp.rs  mod.rs  serial.rs  unix.rs
src/io/socket/: mod.rs  unix.rs
src/port/: conn.rs  listen.rs  mod.rs  read.rs  serial.rs  spawn.rs  tcp.rs  worker.rs  write.rs
src/proto/: dummy.rs  mod.rs
src/proto/oacsp/: input.rs  mod.rs  msg.rs  output.rs  reader.rs  writer.rs
src/util/: mod.rs
src/util/io/: unix.rs
test/: Makefile  main.cpp  tcp-server-it.hpp
test/concurrent/: future-test.hpp  promise-test.hpp
test/io/: buffer-test.hpp  tcp-server-it.hpp
test/mqtt/: session-test.hpp
test/mqtt/decoder/: connect-test.hpp  fixed-header-test.hpp  types-test.hpp
test/mqtt/encoder/: connect-test.hpp  fixed-header-test.hpp  types-test.hpp
test/util/: attempt-test.hpp
