[package]
name = "flightvars"
version = "0.1.0"
authors = ["Alvaro Polo <apoloval@gmail.com>"]

[dependencies]
byteorder = "0.4"
fsuipc = "0.3"
hex = "0.1"
libc = "*"
log = "0.3"
log4rs = "0.3"
serial = { git = "https://github.com/dcuddeback/serial-rs.git" }
ws2_32-sys = "0.2"

[lib]
crate-type = ["dylib"]
